--- a/app/src/main/res/layout/bottom_logout.xml
+++ b/app/src/main/res/layout/bottom_logout.xml
@@ -5,8 +5,7 @@
     android:padding="20dp"
     android:orientation="vertical"
     android:gravity="center_horizontal"
-    android:background="@drawable/bottom_sheet_bg"
-    style="@style/bgTint">
+    style="@style/bottomDialogBg">
 
     <LinearLayout
         android:layout_width="35dp"
@@ -22,8 +21,14 @@
         android:text="Logout"
         android:textColor="#F75555"
         android:fontFamily="@font/urbanist_bold"
-        android:textSize="24sp"
-        android:layout_marginBottom="20dp"/>
+        android:textSize="24sp"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:background="@drawable/line_shape"
+        android:layout_marginVertical="15dp"
+        style="@style/strokeBgColor"/>
 
     <TextView
         android:layout_width="match_parent"
