--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -7,7 +7,7 @@
     android:gravity="center_horizontal"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Screens.Fragments.AccountFragment"
-    style="@style/screenBg">
+    style="@style/screenBgTwo">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -82,11 +82,11 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="10dp"
+        android:layout_height="5dp"
         android:background="@drawable/line"
         android:layout_marginHorizontal="20dp"
         android:layout_marginVertical="20dp"
-        style="@style/searchBg"/>
+        style="@style/strokeBgColor"/>
 
     <LinearLayout
         android:layout_width="match_parent"
