--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Screens.Fragments.CartFragment"
-    style="@style/screenBg">
+    style="@style/screenBgTwo">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -46,7 +46,8 @@
         android:layout_weight="1"
         android:orientation="vertical"
         android:layout_marginHorizontal="20dp"
-        android:gravity="center">
+        android:gravity="center"
+        android:visibility="visible">
 
         <ImageView
             android:layout_width="match_parent"
@@ -78,6 +79,112 @@
                 android:textSize="18sp"
                 style="@style/textColorLight"/>
 
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:dividerHeight="0dp"
+            android:divider="@null"
+            tools:listitem="@layout/product_cart_listview"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:paddingHorizontal="25dp"
+            android:paddingTop="20dp"
+            android:paddingBottom="20dp"
+            style="@style/borderRadiusTop"
+            android:layout_marginBottom="-1dp"
+            android:layout_marginLeft="-1dp"
+            android:layout_marginRight="-1dp">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_weight="0.3">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Total price"
+                    android:fontFamily="@font/urbanist_medium"
+                    android:textSize="12sp"
+                    android:lineHeight="17dp"
+                    style="@style/textColorLight"/>
+
+                <TextView
+                    android:id="@+id/totalPrice"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="$0"
+                    android:fontFamily="@font/urbanist_bold"
+                    android:textSize="24sp"
+                    style="@style/textColor"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/btnCheckout"
+                android:layout_width="wrap_content"
+                android:layout_height="58dp"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:orientation="horizontal"
+                android:background="@drawable/button_shape"
+                android:layout_marginLeft="5dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Checkout"
+                    android:fontFamily="@font/urbanist_bold"
+                    android:textSize="16sp"
+                    android:textColor="@color/white"/>
+
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/arrow__right"
+                    android:layout_marginLeft="10dp"
+                    app:tint="@color/white" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/btnOutOfStock"
+                android:layout_width="wrap_content"
+                android:layout_height="58dp"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:orientation="horizontal"
+                android:background="@drawable/button_shape"
+                android:visibility="gone"
+                style="@style/EcommButtonSecondary">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Out of Stock"
+                    android:fontFamily="@font/urbanist_bold"
+                    android:textSize="16sp"
+                    style="@style/EcommButtonSecondary"/>
+
+            </LinearLayout>
 
         </LinearLayout>
 
