--- a/app/src/main/res/layout/fragment_order_completed.xml
+++ b/app/src/main/res/layout/fragment_order_completed.xml
@@ -4,40 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".Screens.Fragments.WishlistFragment"
-    style="@style/screenBgTwo">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_vertical">
-
-        <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:src="@drawable/logo"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="My Wishlist"
-            android:fontFamily="@font/urbanist_bold"
-            android:textSize="28sp"
-            android:translationX="-5dp"
-            android:layout_weight="1"
-            style="@style/textColor"/>
-
-        <ImageView
-            android:id="@+id/search"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:src="@drawable/search"
-            android:layout_marginRight="15dp"
-            style="@style/iconColor"/>
-
-    </LinearLayout>
+    style="@style/screenBgTwo"
+    android:paddingHorizontal="20dp"
+    tools:context=".Screens.Fragments.OrderCompletedFragment">
 
     <LinearLayout
         android:id="@+id/notfoundContainer"
@@ -45,8 +14,8 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:orientation="vertical"
-        android:layout_marginHorizontal="20dp"
-        android:gravity="center">
+        android:gravity="center"
+        android:visibility="visible">
 
         <ImageView
             android:layout_width="match_parent"
@@ -63,7 +32,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="You don't have a favorite product"
+                android:text="You don't have an order yet"
                 android:fontFamily="@font/urbanist_bold"
                 android:textSize="24sp"
                 style="@style/textColor"/>
@@ -71,7 +40,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="You don't have a wishlist products at this time"
+                android:text="You don't have an completed orders at this time"
                 android:fontFamily="@font/urbanist_regular"
                 android:textAlignment="center"
                 android:layout_marginTop="10dp"
