--- a/app/src/main/res/layout/fragment_orders.xml
+++ b/app/src/main/res/layout/fragment_orders.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Screens.Fragments.OrdersFragment"
-    style="@style/screenBg">
+    style="@style/screenBgTwo">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -39,48 +39,36 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/notfoundContainer"
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="vertical"
-        android:layout_marginHorizontal="20dp"
-        android:gravity="center">
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="220dp"
-            style="@style/notFoundImage"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
+        app:tabMode="fixed"
+        app:tabSelectedTextColor="@color/myTheme"
+        app:tabIndicatorColor="@color/myTheme"
+        app:tabIndicatorHeight="4dp"
+        app:tabTextAppearance="@style/tabText"
+        app:tabPaddingBottom="15dp"
+        app:tabPaddingTop="15dp"
+        android:layout_marginHorizontal="20dp">
+        
+        <com.google.android.material.tabs.TabItem
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center"
-            android:layout_marginTop="30dp">
+            android:text="Active"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="You don't have an order yet"
-                android:fontFamily="@font/urbanist_bold"
-                android:textSize="24sp"
-                style="@style/textColor"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="You don't have an active orders at this time"
-                android:fontFamily="@font/urbanist_regular"
-                android:textAlignment="center"
-                android:layout_marginTop="10dp"
-                android:textSize="18sp"
-                style="@style/textColorLight"/>
+        <com.google.android.material.tabs.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Completed"/>
 
 
-        </LinearLayout>
+    </com.google.android.material.tabs.TabLayout>
 
-    </LinearLayout>
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"/>
 
 </LinearLayout>
