--- a/app/src/main/res/layout/product_listview.xml
+++ b/app/src/main/res/layout/product_listview.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:orientation="vertical"
+    android:paddingBottom="10dp"
     android:layout_height="match_parent"
     android:id="@+id/item">
 
