--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -69,6 +69,9 @@
     <style name="screenBg">
         <item name="android:background">#fff</item>
     </style>
+    <style name="screenBgTwo">
+        <item name="android:background">#FCFCFC</item>
+    </style>
     <style name="bgTint">
         <item name="android:backgroundTint">#fff</item>
     </style>
@@ -101,6 +104,31 @@
     </style>
     <style name="productTitle">
         <item name="android:textColor">#DFDFDF</item>
+    </style>
+    <style name="bottomDialogBg">
+        <item name="android:background">@drawable/bottom_dialog_bg</item>
+    </style>
+    <style name="strokeBgColor">
+        <item name="android:backgroundTint">#EEEEEE</item>
+    </style>
+    <style name="borderRadiusTop">
+        <item name="android:background">@drawable/border_radius_top</item>
+    </style>
+    <style name="productCartBg">
+        <item name="android:backgroundTint">#FFFFFF</item>
+    </style>
+    <style name="bottomDialogBgTwo">
+        <item name="android:background">@drawable/bottom_dialog_bg_two</item>
+    </style>
+    <style name="productCartDialogBg">
+        <item name="android:backgroundTint">#FFFFFF</item>
+    </style>
+    <style name="tabText">
+        <item name="android:fontFamily">@font/urbanist_semibold</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">#9E9E9E</item>
+        <item name="textAllCaps">false</item>
+        <item name="android:letterSpacing">0.0</item>
     </style>
 
 </resources>
