--- a/app/src/main/res/drawable/heart_outlined.xml
+++ b/app/src/main/res/drawable/heart_outlined.xml
@@ -9,13 +9,13 @@
       android:strokeWidth="1.5"
       android:fillColor="#00000000"
       android:fillType="evenOdd"
-      android:strokeColor="#212121"
+      android:strokeColor="@color/myTheme"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M16,6.7C17.07,7.046 17.826,8.001 17.917,9.122"
       android:strokeLineJoin="round"
       android:strokeWidth="1.5"
       android:fillColor="#00000000"
-      android:strokeColor="#212121"
+      android:strokeColor="@color/myTheme"
       android:strokeLineCap="round"/>
 </vector>
