--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -106,8 +106,7 @@
                     android:layout_width="26dp"
                     android:layout_height="26dp"
                     android:src="@drawable/heart_outlined"
-                    android:layout_marginLeft="15dp"
-                    app:tint="@color/myTheme" />
+                    android:layout_marginLeft="15dp" />
 
             </LinearLayout>
 
