--- a/app/src/main/res/layout/product_listview.xml
+++ b/app/src/main/res/layout/product_listview.xml
@@ -27,8 +27,7 @@
             android:layout_height="24dp"
             android:src="@drawable/heart_outlined"
             android:layout_gravity="top|right"
-            android:layout_margin="15dp"
-            app:tint="@color/myTheme" />
+            android:layout_margin="15dp" />
 
         <TextView
             android:id="@+id/pDiscount"
