--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -85,6 +85,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/cartContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -92,6 +93,7 @@
         android:visibility="gone">
 
         <ListView
+            android:id="@+id/listView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
