--- a/app/src/main/res/layout/product_cart_listview.xml
+++ b/app/src/main/res/layout/product_cart_listview.xml
@@ -79,6 +79,7 @@
                         android:fontFamily="@font/urbanist_bold"
                         android:textColor="#9F9F9F"
                         android:textSize="13sp"
+                        android:visibility="gone"
                         android:layout_marginVertical="5dp"
                         android:background="@drawable/line"
                         android:backgroundTint="#9F9F9F"/>
