--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -73,7 +73,7 @@
                     android:layout_height="50dp"
                     android:background="@drawable/circle_shape"
                     android:backgroundTint="#1401B763"
-                    android:padding="8dp">
+                    android:padding="6dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -141,118 +141,16 @@
                 style="@style/textColor"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
+                android:layout_marginBottom="10dp"
                 android:fontFamily="@font/urbanist_bold"
                 android:text="Order List"
                 android:textSize="20sp" />
 
             <LinearLayout
+                android:id="@+id/orderList"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:cardCornerRadius="30dp"
-                    app:cardElevation="0dp"
-                    style="@style/productCartBg">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:padding="20dp"
-                        android:gravity="center_vertical">
-
-                        <FrameLayout
-                            android:layout_width="120dp"
-                            android:layout_height="120dp"
-                            android:background="@drawable/product_card_bg"
-                            style="@style/productBgColor">
-
-                            <ImageView
-                                android:id="@+id/pImage"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:src="@drawable/testimg"
-                                android:scaleType="fitCenter"
-                                android:backgroundTint="@color/transparent"/>
-
-                        </FrameLayout>
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:orientation="vertical"
-                            android:layout_marginLeft="20dp">
-
-                            <TextView
-                                android:id="@+id/pName"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:fontFamily="@font/urbanist_bold"
-                                android:text="Sansevieria Trifasci..."
-                                android:textSize="18sp"
-                                android:maxLines="1"
-                                android:minLines="1"
-                                style="@style/textColor"/>
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal"
-                                android:gravity="center_vertical">
-
-                                <TextView
-                                    android:id="@+id/pPrice"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="$23"
-                                    android:fontFamily="@font/urbanist_bold"
-                                    android:textColor="@color/myTheme"
-                                    android:textSize="18sp"
-                                    android:layout_marginRight="5dp"/>
-
-                            </LinearLayout>
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal"
-                                android:layout_marginTop="5dp"
-                                android:gravity="center_vertical">
-
-                                <LinearLayout
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:orientation="horizontal"
-                                    android:gravity="center"
-                                    android:paddingVertical="8dp"
-                                    android:paddingHorizontal="13dp"
-                                    android:background="@drawable/pill_shape"
-                                    style="@style/bgQuantity">
-
-                                    <TextView
-                                        android:id="@+id/pQty"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:text="0"
-                                        android:fontFamily="@font/urbanist_bold"
-                                        android:textSize="15sp"
-                                        style="@style/textQuantity"/>
-
-                                </LinearLayout>
-
-
-                            </LinearLayout>
-
-                        </LinearLayout>
-
-                    </LinearLayout>
-
-                </androidx.cardview.widget.CardView>
 
             </LinearLayout>
 
