--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -26,12 +26,25 @@
             android:layout_gravity="center"
             style="@style/productTitle"/>
 
-        <ImageView
-            android:id="@+id/pImage"
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="320dp"
-            android:src="@drawable/testimg"
-            android:layout_gravity="center"/>
+            android:layout_height="300dp"
+            app:cardCornerRadius="20dp"
+            app:cardElevation="0dp"
+            android:layout_marginHorizontal="20dp"
+            android:layout_gravity="center"
+            android:backgroundTint="@color/transparent">
+
+            <ImageView
+                android:id="@+id/pImage"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/testimg"
+                android:scaleType="fitCenter"
+                android:layout_gravity="center"/>
+
+        </androidx.cardview.widget.CardView>
+
 
         <LinearLayout
             android:layout_width="match_parent"
