--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -129,4 +129,7 @@
         <item name="textAllCaps">false</item>
         <item name="android:letterSpacing">0.0</item>
     </style>
+    <style name="mapImage">
+        <item name="android:src">@drawable/map_img_dark</item>
+    </style>
 </resources>
