--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -127,6 +127,45 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/addressBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:background="@drawable/search_bg"
+        android:backgroundTint="@color/transparent"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginBottom="10dp"
+        android:paddingVertical="15dp"
+        android:paddingHorizontal="10dp"
+        >
+
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/location_outline"
+            style="@style/iconColor"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginHorizontal="10dp"
+            android:text="Address"
+            android:textAlignment="textStart"
+            android:fontFamily="@font/urbanist_semibold"
+            android:textSize="18sp"
+            style="@style/textColor"/>
+
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/arrow_right"
+            style="@style/iconColor"/>
+
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/logoutBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
