--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -133,5 +133,11 @@
     <style name="mapImage">
         <item name="android:src">@drawable/map_img</item>
     </style>
+    <style name="inputBg">
+        <item name="android:backgroundTint">#FAFAFA</item>
+    </style>
+    <style name="inputTextColor">
+        <item name="android:textColor">#212121</item>
+    </style>
 
 </resources>
