--- a/app/src/main/res/layout/activity_select_address.xml
+++ b/app/src/main/res/layout/activity_select_address.xml
@@ -57,9 +57,9 @@
                 android:text="Add New Address"
                 android:layout_width="match_parent"
                 android:layout_marginHorizontal="20dp"
-                android:layout_marginVertical="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="20dp"
                 style="@style/EcommButtonSecondary"/>
-
 
         </LinearLayout>
 
