--- a/app/src/main/res/layout/product_cart_listview.xml
+++ b/app/src/main/res/layout/product_cart_listview.xml
@@ -3,15 +3,15 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingTop="10dp"
-    android:paddingBottom="10dp"
-    android:paddingHorizontal="20dp">
+    android:paddingVertical="5dp"
+    android:paddingHorizontal="10dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="30dp"
-        app:cardElevation="0dp"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="2dp"
+        android:layout_margin="5dp"
         style="@style/productCartBg">
 
         <LinearLayout
@@ -29,7 +29,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     app:cardCornerRadius="20dp"
-                    app:cardElevation="0dp"
+                    app:cardElevation="10dp"
+                    android:layout_margin="8dp"
                     android:background="@drawable/product_card_bg"
                     style="@style/productBgColor">
 
@@ -121,8 +122,8 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:gravity="center"
-                        android:paddingVertical="8dp"
-                        android:paddingHorizontal="13dp"
+                        android:paddingVertical="10dp"
+                        android:paddingHorizontal="18dp"
                         android:background="@drawable/pill_shape"
                         style="@style/bgQuantity">
 
@@ -159,8 +160,8 @@
 
                     <ImageView
                         android:id="@+id/delete"
-                        android:layout_width="23dp"
-                        android:layout_height="23dp"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
                         android:src="@drawable/delete_outlined"
                         style="@style/iconColor"/>
 
